
* Threshold argument added to `filter_stats()` 
  (see https://github.com/grunwaldlab/poppr/issues/94) 
* The pipe operator (`%>%`) is now exported from magrittr to make chaining 
  commands easier.
* `mlg.filter()` can now return multiple statistics.
* The user can now control the size of the labels in the index of association 
  plots with the labsize and linesize arguments in the plot method.
  
  
BUG FIX
-----------

* An issue that caused errors in the `imsn()` code output was fixed
  (see https://github.com/grunwaldlab/poppr/issues/93)
* Caught bug where the `mlg.filter()` assignment method was using `nei.dist()`
  instead of `diss.dist()` when no distance was specified.
* A bug that resulted in significantly negative values from `bitwise.ia()` with
  large sample sizes was fixed. Spotted by @knausb
  (see https://github.com/grunwaldlab/poppr/issues/100)
* Fixed issue where plot_filter_stats wasn't displaying the full range of MLGs
* Color vectors are now correctly parsed when passed to msn functions 
  (see https://github.com/grunwaldlab/poppr/issues/55) for details. Long color
  vectors are now accepted, albiet with warning.
  
MISC
-----------

* Documentation for `mlg.filter()` was clarified and updated with more examples.

poppr 2.1.1
===========

NEW FEATURES
-----------

* `imsn()` now has collapsible side panels
* `nmll()` and `mll()` will now handle genind and genlight objects
* `rraf()` now gives options for minor allele correction encompassed in the 
  internal function `rare_allele_correction()`. This extends also to `pgen()` 
  and `psex()`, which must correct minor allele frequencies by default. See 
    https://github.com/grunwaldlab/poppr/issues/81 for details.

MISC
-----------

* `mlg.filter()` now defaults to using `diss.dist()`
* default threshold for `filter_stats()` is now 1e+6
* `mlg.filter()` now returns a list instead of a pairlist
* the "hist" argument for `poppr()` is now deprecated in favor of "plot"
* documentation improvements