@@ -11,6 +11,7 @@ NEW FEATURES
 * `mlg.filter()` can now return multiple statistics.
 * The user can now control the size of the labels in the index of association 
   plots with the labsize and linesize arguments in the plot method.
+* `private_alleles()` gains a drop argument.
   
   
 BUG FIX
